Optimized app and fixed some bugs.